--- a/styles/about.css
+++ b/styles/about.css
@@ -32,6 +32,30 @@
     max-width: 700px;
 }
 
+/* IMG */
+.gallery img {
+    cursor: pointer;
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
+
+.modal-content {
+    background: transparent;
+    border: none;
+}
+
+.modal-body {
+    background: transparent;
+    padding: 0;
+}
+
+.modal img {
+    background: transparent;
+    display: block;
+    width: 100%;
+    height: auto;
+}
 
 
 /* RWD */
@@ -55,5 +79,10 @@
     .about_text p {
         line-height: 30px;
         margin: 40px 0 0 2px;
+    }
+
+    /* IMG */
+    .about_images img {
+        width: 500px;
     }
 }
