--- a/styles/contact.css
+++ b/styles/contact.css
@@ -18,6 +18,10 @@
     max-width: 700px;
 }
 
+span {
+    cursor: pointer;
+}
+
 /* RWD */
 @media screen and (max-width: 821px){
     /* MAIN CONTENT */
