--- a/styles/about.css
+++ b/styles/about.css
@@ -181,7 +181,8 @@
 
     .about_text p {
         line-height: 30px;
-        margin: 40px 0 0 2px;
+        margin: 40px 10px;
+        text-align: justify;
     }
     
     /* VIDEO */
