chore: added a target blank to the links

--- a/styles/index.css
+++ b/styles/index.css
@@ -16,7 +16,7 @@
     --main-color: #fff;
     --secondary-color: #000;
     
-    --link-active: #50C878;
+    --link-active: #228B22;
 }
 
 /* PAGE TRANSITION */
